# mpm

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cursor/: .gitignore
.github/workflows/: build.yml  verify.yml
src/: cli.rs  config.rs  constants.rs  doctor.rs  error.rs  import.rs  lockfile.rs  main.rs  manifest.rs  sync.rs  ui.rs
src/commands/: add.rs  doctor.rs  import.rs  init.rs  lock.rs  mod.rs  remove.rs  sync.rs
src/sources/: github.rs  hangar.rs  hash.rs  http.rs  mod.rs  modrinth.rs  search.rs  source_trait.rs  spigot.rs  version_data.rs  version_matcher.rs  version_selector.rs
tests/: cli_test.rs
