[package]
name = "mpm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A fast, deterministic plugin manager for Minecraft servers. Built in Rust for reproducible, lockfile-verified installations."
readme = "README.md"
publish = false

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.10"
urlencoding = "2.1.3"
zip = "7.0.0"

[dev-dependencies]
tempfile = "3.24.0"

[lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
